cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm main.cpp)
add_executable(L26 basic/Array/L26.cpp)
add_executable(L122 basic/Array/L122.cpp)
add_executable(L36 basic/Array/L36.cpp)
add_executable(L48 basic/Array/L48.cpp)
add_executable(L66 basic/Array/L66.cpp)
add_executable(L136 basic/Array/L136.cpp)
add_executable(L189 basic/Array/L189.cpp)
add_executable(L217 basic/Array/L217.cpp)
add_executable(L283 basic/Array/L283.cpp)
add_executable(L350 basic/Array/L350.cpp)
add_executable(L1 basic/Array/L1.cpp)